--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -320,12 +320,30 @@
        </widget>
       </item>
       <item>
-       <widget class="QComboBox" name="cbxZoomFactor">
+       <widget class="QSlider" name="zoomSlider">
+        <property name="maximumSize">
+         <size>
+          <width>120</width>
+          <height>16777215</height>
+         </size>
+        </property>
+        <property name="toolTip">
+         <string>Zoom</string>
+        </property>
         <property name="whatsThis">
          <string>Allows to choose the view's zoom level.</string>
         </property>
-        <property name="editable">
-         <bool>false</bool>
+        <property name="maximum">
+         <number>5</number>
+        </property>
+        <property name="pageStep">
+         <number>4</number>
+        </property>
+        <property name="value">
+         <number>1</number>
+        </property>
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
         </property>
        </widget>
       </item>
