mainwindow: Address some stylistic and typographic concerns
 * Use an en-dash in the About dialog
 * Use a real minus for the Zoom Out button's label
 * Make better use of rich text in the About dialog
 * Provide the application icon for the About dialog

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -315,7 +315,7 @@
          <string>Reduces the zoom level.</string>
         </property>
         <property name="text">
-         <string>-</string>
+         <string>−</string>
         </property>
        </widget>
       </item>
